Drop WSAPoll based poller from testing